feat: manage consumer secret grants
